--- a/scripts/install
+++ b/scripts/install
@@ -50,10 +50,10 @@ yunohost service add $app --description="Documentation tool for creativity" --lo
 #=================================================
 ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="../conf/settings_base.json" --destination="$install_dir/settings_base.json"
+ynh_add_config --template="../conf/settings.json" --destination="$install_dir/settings.json"
 
-chmod 400 "$install_dir/settings_base.json"
-chown $app:$app "$install_dir/settings_base.json"
+chmod 400 "$install_dir/settings.json"
+chown $app:$app "$install_dir/settings.json"
 
 #=================================================
 # INSTALL DODOC
